# prose

./: .coverage  .gitignore  CLAUDE.md  EXPERIMENTS.md  PHASE1_5_FINDINGS.md  README.md  TODO.md  analyze_confidence.py  demo_phase1_5.py  flake.nix  pyproject.toml  run_test.fish  setup.sh  test_inference.py  test_inference_50pct.py  test_inference_with_tests.py
configs/: phase1_5.yaml  phase1_5_guided.yaml  phase1_5_guided_baseline.yaml  phase1_5_guided_fixed.yaml  phase1_5_guided_scaled.yaml  phase1_5_tarantula_scaled.yaml  phase1_prototype.yaml
docs/: NEXT_STEPS.md  architecture.md  phase1.5.md  phase1_analysis.md  phase1_results.md  plan.md
scripts/: 01_generate_data.py  02_train_prototype.py  03_evaluate.py  add_extra_templates.py  add_simple_templates.py  analyze_dataset_diversity.py  analyze_diversity.py  build_vocabulary.py  demo_phase1_5_infrastructure.py  enumerate_patterns.py  generate_phase1_5_dataset.py  merge_templates.py  show_examples.py  test_baseline_comparison.py  test_data_pipeline.py  test_experiment_3c.py  test_experiment_3d.py  test_guided_refinement.py  test_template_diversity.py  train_phase1_5.py  train_phase1_5_guided.py  verify_cuda.sh  verify_position_encodings.py
src/data/: __init__.py  asg_builder.py  asg_reconstructor.py  dataset.py  extra_templates.py  mega_templates.py  new_templates_scratch.py  simple_templates.py  synthetic_gen.py  test_generator.py  ultra_templates.py  vocabulary.py
tests/: test_asg_reconstructor.py  test_denoising_metrics.py  test_evaluation.py  test_inference.py  test_interpreter.py  test_iterative_model.py  test_position_encodings.py  test_trajectory.py  test_vocabulary.py
(+14 files in other folders)
